# metahackathon

./: .env.template  inference.py  test_env.py
final/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  shopping_cart_inference.py  test_shopping_cart_env.py
final/server/: Dockerfile  __init__.py  app.py  final_environment.py  requirements.txt  shopping_cart_environment.py
